--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
   
     <nav class="navbar navbar-light">
       <div class="container text-center">
-        <a class="navbar-brand mb-0 border-0" href="/">
+        <a class="navbar-brand mb-0 border-0" href="{{site.baseurl}}">
           <img class="logo" src="{{site.baseurl}}/img/ik-logo.svg" alt="">
           <!-- <i class="fas fa-star text-warning"></i> {{site.title}} -->
         </a>
