--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,8 +2,8 @@
   
     <nav class="navbar navbar-light">
       <div class="container text-center">
-        <a class="navbar-brand mb-0 border-0" href="{{site.baseurl}}">
-          <img class="logo" src="{{site.baseurl}}/img/ik-logo.svg" alt="">
+        <a class="navbar-brand mb-0 border-0" href="{{site.url}}">
+          <img class="logo" src="{{site.url}}/img/ik-logo.svg" alt="">
           <!-- <i class="fas fa-star text-warning"></i> {{site.title}} -->
         </a>
         <!-- <span class="navbar-brand mb-0 h1">{{site.title}}</span> -->
