--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,13 +10,13 @@
       <div class="col-12 col-md-4 nowrap text-md-center mb-4">
         {% if site.company_url %}
         <a href="{{site.company_url}}" target="_blank" class="logo">
-          <img src="{{site.baseurl}}/img/ik-logo-hor.svg" alt="logo">
+          <img src="{{site.url}}/img/ik-logo-hor.svg" alt="logo">
         </a>
         {% endif %}
       </div>
       <div class="col-12 col-md-4 nowrap text-md-right mb-4">
-        <img src="{{site.baseurl}}/img/zero.svg" class="cc" alt=zero">
-        <img src="{{site.baseurl}}/img/cc.svg" class="cc" alt=cc">
+        <img src="{{site.url}}/img/zero.svg" class="cc" alt=zero">
+        <img src="{{site.url}}/img/cc.svg" class="cc" alt=cc">
       </div>
     </div>
   </div>
